feat: Implement foundational Angular application structure including routing, pages, shared components, and services.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,6 @@
-
-
-
-<app-navbar/>
-<div class="container">
-  <router-outlet/>
-</div>
-<app-footer/>
-
+<app-loader-screen />
+<app-navbar />
+<main class="container-list">
+  <router-outlet />
+</main>
+<app-footer />
