feat: Implement product listing, creation, and detail pages with core services, interceptors, and shared UI components.

--- a/src/app/layout/navbar/navbar.html
+++ b/src/app/layout/navbar/navbar.html
@@ -12,6 +12,12 @@
         routerLink="/"
         routerLinkActive="active"
         >Home</a>
+        <a class="nav-link active"
+         aria-current="page"
+        href="#"
+        routerLink="/add-product"
+        routerLinkActive="active"
+        >Add Product</a>
       </div>
     </div>
   </div>
